# rphllljust-supremo-papada

./: .gitignore  README.md  REAME.md  RELATORIO_QA_SUAP.md  docker-compose.development.yml  docker-compose.gateway.yml  docker-compose.homolog.yml  docker-compose.production.yml  docker-compose.yml
SUAP/: .env.sample  README.md  __test_accounts_output.txt  __test_auth_output.txt  __test_auth_output_cmd.txt  pyproject.toml  requirements.txt
SUAP/apps/access/: decorators.py  permissions.py  policies.py  tests.py  urls.py
SUAP/apps/accounts/: apps.py  forms.py  services.py  tests.py  tokens.py  utils.py  views.py
SUAP/apps/agenda/: admin.py  apps.py  tests.py  urls.py  views.py
SUAP/apps/api/: urls.py
SUAP/apps/arquivo/: admin.py  apps.py  forms.py  urls.py  views.py
SUAP/apps/auditoria/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
SUAP/apps/core/: permissions.py  tests.py  urls.py  utils.py  views.py
SUAP/apps/cursos/: models.py  tests.py  urls.py  views.py
SUAP/backend/: .dockerignore  .env.development.sample  .env.homolog.sample  .env.production.sample  .env.sample  Dockerfile  README.md  curso_19.csv  manage.py  moodlecourse_19.csv  pyproject.toml  relatorio_qa.py  relatorio_qa_v2.py  requirements.txt  setup_qa.py  setup_qa_final.py  setup_qa_v2.py  teste_fluxo_completo.py  teste_qa_completo.py
SUAP/config/: asgi.py  frontend_views.py  settings.py  urls.py  wsgi.py
SUAP/docs/: integracao-ava-jwt.md
SUAP/frontend/: .dockerignore  .env.development.example  .env.example  .env.homolog.example  .env.production.example  check_frontend.py  check_imports.py  package-lock.json  package.json  tailwind.config.js  vite.config.js
SUAP/scripts/: rodar.ps1
SUAP/templates/: base.html
(+1320 files in other folders)
