[tool.poetry]
name = "SUAP"
version = "0.1.0"
description = ""
authors = ["jackvadderr", "rphllljust"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.2"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.9.0"
djangorestframework-simplejwt = "^5.5.1"
psycopg = {version = "^3.2.12", extras = ["binary"]}
python-decouple = "^3.8"
weasyprint = "62.3"
pydyf = "0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.django]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
